<resources>
    <string name="app_name">Udacity - Recipe Book</string>
    <string name="appwidget_text">Recipe Book</string>
    <string name="add_widget">Udacity Recipebook widget</string>

    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="recipe_ingredients">Recipe Ingredients</string>
    <string name="ingredients">Ingredients</string>
    <string name="should_implement_exo_player_listener">Should implement ExoPlayerListener</string>
    <string name="must_implement_step_selection_listener">must implement StepSelectionListener</string>
</resources>
